# groundly

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/agents/: adversarial-reviewer.md  performance-specialist.md  security-reviewer.md  spec-guardian.md
.claude/rules/: architecture.md  conventions.md  grounding-and-privacy.md
.claude/skills/decision/: SKILL.md
.claude/skills/implement-uc/: SKILL.md
.github/workflows/: ci.yml  publish.yml
docs/: groundly-spec.md  unilearn-spec.md
docs/architecture/: agents.md  data-model.md  overview.md  retrieval.md
docs/design/course upload/: code.html
docs/design/home/: DESIGN.md  code.html
docs/design/knowledge base/: code.html
docs/design/landing/: code.html
docs/guides/: lm-studio.md  mcp-hosts.md
docs/infrastructure/: cost-model.md  distribution.md  security.md
docs/superpowers/reviews/: 2026-07-16-p1-ingestion-pipeline-review.md  2026-07-16-p1-ingestion-pipeline-round2-review.md  2026-07-18-serve-http-review.md  2026-07-20-ingestion-memory-perf.md  2026-07-20-standalone-image-ingestion-review.md
docs/superpowers/specs/: 2026-07-16-p1-cli-surface-design.md  2026-07-16-p1-ingestion-pipeline.md  2026-07-17-p2-import-export.md  2026-07-18-mcp-skeleton-design.md  2026-07-19-groundlyignore-design.md
docs/tech-stack/: tech-stack.md
docs/use-cases/: knowledge-base.md  sharing.md  student-modes.md
groundly/agents/: ask.py  prompts.py  router.py
groundly/cli/: __init__.py  app.py  ask.py  mcp.py  models.py  serve.py  sharing.py  subjects.py
groundly/core/: bundle.py  config.py  manifest.py  paths.py  store.py  subject.py
groundly/ingestion/: extract.py  extract_worker.py  formats.py  pipeline.py  results.py
groundly/llm/: chat.py  config.py  embeddings.py  rerank.py
groundly/mcp/: server.py
groundly/retrieval/: adaptive.py  graph.py  vector.py
groundly/web/static/: theme.css
tests/: conftest.py  test_agents_prompts.py  test_agents_router.py  test_bundle.py  test_cli.py  test_cli_ask.py  test_cli_mcp.py  test_cli_models.py  test_cli_subjects.py  test_extract_worker.py  test_llm_chat.py  test_llm_config.py  test_llm_embeddings.py  test_llm_rerank.py  test_mcp_server.py  test_paths.py  test_pipeline.py  test_pipeline_slow.py  test_retrieval_stubs.py  test_slow_models.py  test_store.py
tests/agents/: test_agents_ask.py
tests/cli/: test_cli_ask.py  test_cli_models.py  test_cli_subjects.py
tests/core/: test_bundle.py  test_config.py  test_store.py
tests/ingestion/: test_extract_limits.py  test_extract_worker.py  test_pipeline.py  test_pipeline_slow.py
tests/llm/: test_slow_models.py
tests/retrival/: test_retrieval_vector.py
unilearn/cli/: __init__.py
unilearn/core/: manifest.py  paths.py  store.py  subject.py
unilearn/ingestion/: extract.py  extract_worker.py  pipeline.py
unilearn/llm/: embeddings.py
