[project]
name = "unilearn"
version = "0.1.0"
description = "Local-first course knowledge bases for AI agents: index your materials, study grounded, share the index."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { file = "LICENSE" }

# Version pinning policy (docs/tech-stack/tech-stack.md): pin EXACT versions of
# llama-index, graphrag, docling, and sentence-transformers at P1 start and
# record them in the thesis + manifest. Until P1, floors only.
dependencies = [
	"typer>=0.12",
	"rich>=13",
	"pydantic>=2.7",
	"pydantic-settings>=2.3",
	"fastapi>=0.111",
	"uvicorn>=0.30",
	"fastmcp>=2.0",
	"sqlite-vec>=0.1",
	"sentence-transformers>=3.0",   # bge-m3 dense + learned sparse
	"docling>=2.0",                 # NO ocr extras — digital documents only (pivot #3)
	"llama-index>=0.11",
	"graphrag>=1.0",
	"genanki>=0.13",                # verified decks → .apkg (final review)
	"httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.5"]
eval = ["ragas>=0.2"]

[project.scripts]
unilearn = "unilearn.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["unilearn"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
