[project]
name = "groundly"
description = "Local-first course knowledge bases for AI agents: index your materials, study grounded, share the index."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { file = "LICENSE" }
dynamic = ["version"]


# Version pinning policy (docs/tech-stack/tech-stack.md): EXACT pins for the
# interchange-relevant stack, set at P1 start (2026-07-16). These are recorded in
# the thesis + every export manifest; upgrades are deliberate events, never tweaks.
dependencies = [
	"typer>=0.12",
	"rich>=13",
	"pydantic>=2.7",
	"pydantic-settings>=2.3",
	"fastapi>=0.111",
	"uvicorn>=0.30",
	"fastmcp>=2.0",
	"sqlite-vec>=0.1",
	"sentence-transformers==5.6.0",
	"FlagEmbedding==1.3.5",         # bge-m3 dense + learned sparse, one forward pass
	"docling==2.113.0",             # includes bundled RapidOCR — OCR enabled
	"rapidocr==3.9.1",              # load-bearing: docling's OCR engine, local/offline
	"llama-index==0.14.23",
	"graphrag==3.1.0",
	"genanki>=0.13",                # verified decks → .apkg
	"httpx>=0.27",
]

[tool.uv]
# FlagEmbedding 1.3.5 predates transformers 5.x (removed is_torch_fx_available)
constraint-dependencies = ["transformers>=4.51,<5"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.5"]
eval = ["ragas>=0.2"]

[project.scripts]
groundly = "groundly.cli:app"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["groundly"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["slow: needs model downloads / real documents; excluded by default, run with -m slow"]
addopts = "-m 'not slow'"
